--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-placeholder
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Cache-Control" content="no-cache"/>
+  <title>adasjusk</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="card">
+    <div class="profile-img"></div>
+    <h2>About Me</h2>
+    <p class="info">
+      I'm adasjusk, a UI/Website designer and backend developer. I like coding and creating privacy-focused tools. I also make servers for games and host them. I have a company called InterJava Studios where I create programs such as Orange Booster, Orange Wallpaper and more!
+    </p>
+    <div class="social-links">
+      <a href="https://github.com/adasjusk" class="social-icon" target="_blank" rel="noopener noreferrer">
+        <i class="bi bi-github"></i>
+      </a>
+      <a href="https://oranges.lt" class="social-icon" target="_blank" rel="noopener noreferrer">
+        <i class="bi bi-box-arrow-up-right"></i>
+      </a>
+      <a href="https://discord.gg/cpkfnRuRv7" class="social-icon" target="_blank" rel="noopener noreferrer">
+        <i class="bi bi-discord"></i>
+      </a>
+      <a href="https://www.youtube.com/@adasjusk?sub_confirmation=1" class="social-icon" target="_blank" rel="noopener noreferrer">
+        <i class="bi bi-youtube"></i>
+      </a>
+    </div>
+    <footer class="footer">
+      <p>&copy; 2025 adasjusk. All rights reserved.</p>
+    </footer>
+  </div>
+</body>
+</html>
