--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="Cache-Control" content="no-cache"/>
-  <title>adasjusk</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="HandheldFriendly" content="True">
+    <link rel="icon" type="image/png" href="logo.png">
+    <link rel="icon" href="logo.png" type="image/x-icon">
+    <title>adasjusk</title>
+    <link rel="canonical" href="adasjusk.is-a.dev">
+    <meta name="referrer" content="no-referrer-when-downgrade"> 
+    <meta property="og:site_name" content="Adasjusk's personal website">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="adasjusk">
+    <meta property="og:description" content="My portfolio">
+    <meta property="og:url" content="https://adasjusk.is-a.dev">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="card">
@@ -34,4 +43,5 @@
     </footer>
   </div>
 </body>
+
 </html>
