--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="HandheldFriendly" content="True">
     <link rel="icon" type="image/png" href="logo.png">
-    <link rel="icon" href="logo.png" type="image/x-icon">
+    <link rel="icon" href="adasjusk.png" type="image/x-icon">
     <title>adasjusk</title>
     <link rel="canonical" href="adasjusk.is-a.dev">
     <meta name="referrer" content="no-referrer-when-downgrade"> 
@@ -45,3 +45,4 @@
 </body>
 
 </html>
+
