--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="HandheldFriendly" content="True">
-    <link rel="icon" type="image/png" href="logo.png">
+    <link rel="icon" type="image/png" href="adasjusk.png">
     <link rel="icon" href="adasjusk.png" type="image/x-icon">
     <title>adasjusk</title>
     <link rel="canonical" href="adasjusk.is-a.dev">
@@ -45,4 +45,5 @@
 </body>
 
 </html>
+
 
