--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <meta property="og:description" content="My portfolio">
     <meta property="og:url" content="https://adasjusk.is-a.dev">
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+  </body>
 </head>
 <body>
   <div class="card">
@@ -24,6 +27,8 @@
     <p class="info">
       I'm adasjusk, a UI/Website designer and backend developer. I like coding and creating privacy-focused tools. I also make servers for games and host them. I have a company called InterJava Studios where I create programs such as Orange Booster, Orange Wallpaper and more!
     </p>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+  </body>
     <div class="social-links">
       <a href="https://github.com/adasjusk" class="social-icon" target="_blank" rel="noopener noreferrer">
         <i class="bi bi-github"></i>
@@ -45,5 +50,6 @@
 </body>
 
 </html>
+
 
 
