--- a/index.html
+++ b/index.html
@@ -1,55 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="HandheldFriendly" content="True">
-    <link rel="icon" type="image/png" href="adasjusk.png">
-    <link rel="icon" href="adasjusk.png" type="image/x-icon">
-    <title>adasjusk</title>
-    <link rel="canonical" href="adasjusk.is-a.dev">
-    <meta name="referrer" content="no-referrer-when-downgrade"> 
-    <meta property="og:site_name" content="Adasjusk's personal website">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="adasjusk">
-    <meta property="og:description" content="My portfolio">
-    <meta property="og:url" content="https://adasjusk.is-a.dev">
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-  </body>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="HandheldFriendly" content="True">
+
+  <title>adasjusk</title>
+
+  <link rel="icon" href="adasjusk.png" type="image/png">
+  <link rel="canonical" href="https://adasjusk.is-a.dev">
+
+  <meta name="referrer" content="no-referrer-when-downgrade">
+  <meta property="og:site_name" content="Adasjusk's personal website">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="adasjusk">
+  <meta property="og:description" content="My portfolio">
+  <meta property="og:url" content="https://adasjusk.is-a.dev">
+
+  <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </head>
+
 <body>
   <div class="card">
     <div class="profile-img"></div>
+
     <h2>About Me</h2>
+
     <p class="info">
       I'm adasjusk, a UI/Website designer and backend developer. I like coding and creating privacy-focused tools. I also make servers for games and host them. I have a company called InterJava Studios where I create programs such as Orange Booster, Orange Wallpaper and more!
     </p>
- </body>
+
     <div class="social-links">
-      <a href="https://github.com/adasjusk" class="social-icon" target="_blank" rel="noopener noreferrer">
+      <a href="https://github.com/adasjusk" target="_blank" rel="noopener noreferrer">
         <i class="bi bi-github"></i>
       </a>
-      <a href="https://oranges.lt" class="social-icon" target="_blank" rel="noopener noreferrer">
+
+      <a href="https://oranges.lt" target="_blank" rel="noopener noreferrer">
         <i class="bi bi-box-arrow-up-right"></i>
       </a>
-      <a href="https://discord.gg/cpkfnRuRv7" class="social-icon" target="_blank" rel="noopener noreferrer">
+
+      <a href="https://discord.gg/cpkfnRuRv7" target="_blank" rel="noopener noreferrer">
         <i class="bi bi-discord"></i>
       </a>
-      <a href="https://www.youtube.com/@adasjusk?sub_confirmation=1" class="social-icon" target="_blank" rel="noopener noreferrer">
+
+      <a href="https://www.youtube.com/@adasjusk?sub_confirmation=1" target="_blank" rel="noopener noreferrer">
         <i class="bi bi-youtube"></i>
       </a>
     </div>
+
     <footer class="footer">
-      <p>&copy; 2025 adasjusk. All rights reserved.</p>
+      <p>© 2025 adasjusk. All rights reserved.</p>
     </footer>
   </div>
 </body>
-
 </html>
-
-
-
-
